--- a/appsettings.json
+++ b/appsettings.json
@@ -16,7 +16,8 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=FashionApi;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=FashionApi;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnectionDocker": "Server=localhost,1434;Database=FashionApi;User Id=sa;Password=YourHomeISOURHOME!626;TrustServerCertificate=True;"
   },
   "Smtp": {
     "Server": "smtp.gmail.com",
