chore(config): enable culture-specific globalization in project settings

--- a/FashionApi.csproj
+++ b/FashionApi.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>9e4db221-d1ac-47c5-9dbc-d82f81a6246c</UserSecretsId>
   </PropertyGroup>
 
