--- a/FashionApi.csproj
+++ b/FashionApi.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>false</InvariantGlobalization>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <UserSecretsId>9e4db221-d1ac-47c5-9dbc-d82f81a6246c</UserSecretsId>
   </PropertyGroup>
 
