--- a/appsettings.json
+++ b/appsettings.json
@@ -17,7 +17,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=FashionApi;Trusted_Connection=True;TrustServerCertificate=True;",
-    "DefaultConnectionDocker": "Server=localhost,1434;Database=FashionApi;User Id=sa;Password=YourHomeISOURHOME!626;TrustServerCertificate=True;"
+    //"DefaultConnectionDocker": "Server=localhost,1434;Database=FashionApi;User Id=sa;Password=YourHomeISOURHOME!626;TrustServerCertificate=True;"
   },
   "Smtp": {
     "Server": "smtp.gmail.com",
