feat(data): customize seed data for HoaiThu.Vn branding
- Change hashtag category from "#Fashion2024" to "#HoaiThuVn2024"
- Update logo GiaoDien metadata to reference HoaiThu.Vn
- Reduce GiaoDien seed list to essential entries for branding alignment

This update tailors the seeded data to match the HoaiThu.Vn brand identity.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,10 +8,10 @@
     }
   },
   "Jwt": {
-    "Key": "your_secret_key_must_be_longer_than_16_characters",
-    "Issuer": "FashionApi",
-    "Audience": "FashionApiClient",
-    "ExpiryInMinutes": 86400 // 60 dayd
+    "Key": "9NPAy5SGiMiU9IWOnX8kcAcuCeoWgubKPi6jlAXzK99dZwlT5",
+    "Issuer": "hoaithu.vn",
+    "Audience": "hoaithu.vn",
+    "ExpiryInMinutes": 86400
   },
 
   "AllowedHosts": "*",
@@ -22,8 +22,8 @@
   "Smtp": {
     "Server": "smtp.gmail.com",
     "Port": "587",
-    "Username": "nguyenhuythien9a1@gmail.com",
-    "Password": "psezvpsaugwqgwcf"
+    "Username": "contact.hoaithu.vn@gmail.com",
+    "Password": "ccphxifgqhicpxbo"
   },
   "ReCaptcha": {
     "SiteKey": "6LdMzlEqAAAAAIRD7o-nvN9bH3jPvKLaKaGW8xD4",
