--- a/appsettings.json
+++ b/appsettings.json
@@ -29,5 +29,9 @@
     "SiteKey": "6LdMzlEqAAAAAIRD7o-nvN9bH3jPvKLaKaGW8xD4",
     "SecretKey": "6LdMzlEqAAAAADE1kT5hDVgT95WXbetEGm_4KHP8"
   },
+  "PasswordMigration": {
+    "Enabled": true,
+    "Description": "Control whether to enable password migration from old SHA256 to new BCrypt method"
+  },
   "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "false"
 }
