refactor: update brand name from HoaiThu.vn to ThuHoai.vn
- Changed API title and documentation from HoaiThu.Vn to ThuHoai.Vn
- Updated CORS origins, email templates, and JWT settings to reflect new domain
- Adjusted social media links and contact email accordingly

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,8 @@
   },
   "Jwt": {
     "Key": "9NPAy5SGiMiU9IWOnX8kcAcuCeoWgubKPi6jlAXzK99dZwlT5",
-    "Issuer": "hoaithu.vn",
-    "Audience": "hoaithu.vn",
+    "Issuer": "ThuHoai.vn",
+    "Audience": "ThuHoai.vn",
     "ExpiryInMinutes": 86400
   },
 
