feat: enhance user management with file validation and admin permissions
Add 5MB size limit for image uploads in user updates to prevent large file issues. Enhance authorization for admin edits, allowing SuperAdmins to modify other active admin accounts for better system management flexibility. Pass current user email to services to enable role-based checks.

--- a/appsettings.json
+++ b/appsettings.json
@@ -33,5 +33,6 @@
     "Enabled": true,
     "Description": "Control whether to enable password migration from old SHA256 to new BCrypt method"
   },
-  "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "false"
+  "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "false",
+  "SuperAdmins": "admin@example.com;hoalthu.vn@gmail.com"
 }
